--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 /* Brand */
 $default-font: 'Roboto', sans-serif;
 $primary-color: color('blue', 50);
+$primary-color-dark: color-shade($primary-color, 20);
 
 /* Color */
 $footer-color: color('gray', 80);
