--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,22 @@ p, h1, h2, h3, h4, h5, h6, ol, ul {
   margin: $default-margin 0 0 0;
 }
 
+table {
+  border-collapse: collapse;
+  margin-top: $default-margin;
+  width: 100%;
+  td, th {
+    border: 1px solid black;
+    padding: 4px 8px;
+  }
+  th {
+    text-align: left;
+  }
+  &.fixed {
+    table-layout: fixed;
+  }
+}
+
 .container {
   box-sizing: border-box;
   margin: -1px ($default-margin - 1px) 0 ($default-margin - 1px);
@@ -61,6 +77,43 @@ p, h1, h2, h3, h4, h5, h6, ol, ul {
   color: white;
   a {
     color: color-tint($link-color, 20);
+  }
+}
+
+/* Form */
+
+label {
+  display: block;
+  margin-top: $default-margin;
+}
+
+input[type=text], input[type=number], textarea {
+  border-radius: 4px;
+  border: 1px solid color('gray', 30);
+  box-sizing: border-box;
+  display: block;
+  font-family: $default-font;
+  font-size: 1em;
+  margin: 0;
+  margin-top: 3px;
+  padding: 10px 5px;
+  width: 100%;
+}
+
+input[type=submit] {
+  appearance: button;
+  background: $primary-color;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: block;
+  font-size: 1em;
+  padding: 10px;
+  width: 100%;
+  &:hover, &:active {
+    background: $primary-color-dark;
   }
 }
 
